--- a/cms/Cargo.toml
+++ b/cms/Cargo.toml
@@ -11,3 +11,5 @@ mongodb = "2.6.0"
 bson = "2.6.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+log = "0.4.0"
+env_logger = "0.9.0"
