Added backend authentication
* added redis, jwt and crypto packages for authentication
* created new services: token_service, redis_serviceand auth_service for authentication
* added user authentication and API authorization (through middleware.go)

--- a/backend/config.yml
+++ b/backend/config.yml
@@ -8,3 +8,9 @@ server:
 logging:
   level: information
   port: 8081
+
+authentication:
+  token_expire_minutes: 60
+  redis_address: localhost:6379
+  redis_password: ""
+  redis_db: 0
